Trying to make it work

--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
             <input type="text" id="text-search" name="nome" placeholder="Nome Completo">
             <input type="submit" id="send-btn">
         </form>
+        <div id="information">
+
+        </div>
     </div>
 </body>
     <script src="assets/main.js"></script>
